# ai-video-editor

./: .coderabbit.yaml  .coverage  .env.example  .gitignore  .issue-body-3-2.md  .lintstagedrc.js  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  ROOT_CAUSE_G3G4.md  SECURITY.md  T15_GATE_RESULT.md  TICKET_0_RESULT.md  TICKET_1_RESULT.md  TICKET_2_RESULT.md  TICKET_3_RESULT.md  TICKET_G1_RESULT.md  TICKET_G2_RESULT.md  TICKET_G5_RESULT.md  TICKET_T15_F4_RESULT.md  TICKET_T15_S3S4_RESULT.md  TICKET_T15_tf2_RESULT.md  VERBS.md  WAVE_2_RESULT.md  WAVE_3C_RESULT.md  WAVE_4_RESULT.md  WAVE_5X_RESULT.md  WAVE_5_RESULT.md  WAVE_6X_RESULT.md  WAVE_6_RESULT.md  (+10 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
apps/: AGENTS.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  (+8 more)
services/guardrails/: pyproject.toml
services/guardrails/src/guardrails/: __init__.py  config.py  engine.py  main.py  output.py
services/guardrails/src/guardrails/config/: config.yml
services/ingest-worker/: pyproject.toml
services/ingest-worker/src/ingest_worker/: __init__.py  __main__.py  activities.py  beat_detect.py  clip_capability.py  clip_emotion.py  clip_semantic.py  heatmap.py  identity.py  loudness.py  probe.py  scene_depth.py  shot_detect.py  song_lyrics.py  song_meaning.py  song_mood.py  stem_events.py  stem_separate.py  vocal_emotion.py  whisperx_transcribe.py  workflows.py
services/ingest-worker/tests/: test_clip_capability.py  test_clip_emotion.py  test_clip_semantic.py  test_heatmap.py  test_identity.py  test_loudness.py  test_scene_depth.py  test_song_meaning.py  test_song_mood.py  test_stem_events.py  test_vocal_emotion.py
services/reason-worker/: pyproject.toml
services/reason-worker/src/reason_worker/: __init__.py  __main__.py  activities.py  animation_select.py  anticipation.py  arc_anchor.py  aspect_detect.py  attribution.py  audio_mix.py  audio_scoring.py  behavior_corpus.py  behavior_engine.py  captions.py  clip_audio_filter.py  clip_rank.py  clip_semantic_loader.py  cutlist_gen.py  edit_intent.py  emphasis_text.py  face_safe.py  filler_prompt.py  font_select.py  generative_client.py  iconic_quotes.py  intent_composer.py  intent_technique_mapper.py  kinetic_compose.py  lyric_overlays.py  marengo_client.py  momentum.py  narrative_arcs.py  narrative_mode.py  protagonist_pick.py  save_the_cat.py  section_mood.py  slot_generator.py  snyder_detect.py  song_narrative.py  speed_ramps.py  text_edit.py  (+4 more)
services/reason-worker/tests/: test_anticipation.py  test_arc_anchor.py  test_aspect_detect.py  test_attribution.py  test_audio_mix.py  test_audio_scoring.py  test_behavior_corpus.py  test_behavior_engine.py  test_captions.py  test_clip_audio_filter.py  test_clip_rank_arc.py  test_clip_rank_exhaust.py  test_clip_rank_momentum.py  test_duration.py  test_emphasis_text.py  test_face_safe.py  test_glimpse_interleave.py  test_iconic_quotes.py  test_intent_composer.py  test_intent_technique_mapper.py  test_kinetic_compose.py  test_lyric_overlays.py  test_momentum.py  test_narrative_arcs.py  test_protagonist_pick.py  test_save_the_cat.py  test_semantic_rank.py  test_slot_density.py  test_snap_priority.py  test_snyder_detect.py  test_song_narrative.py  test_speed_ramps.py  test_text_edit.py  test_transition_select.py  test_wave10_effects.py  test_workflow.py
services/render-worker/: pyproject.toml
services/render-worker/src/render_worker/: __init__.py  __main__.py  activities.py  compiler.py  fcpxml_export.py  identity_matte.py  keyframes.py  kinetic_animations.py  layers.py  object_edit.py  reframe.py  sam3_client.py  stabilize.py  workflows.py
services/render-worker/src/render_worker/edits/: __init__.py  camera_motion.py  chromatic_aberration.py  color_shift.py  flash_frame.py  focus_pull.py  hm_mvgd_hm.py  structural_change.py  texture_replace.py  vignette.py  zoom_punch.py
services/render-worker/tests/: test_anticipation_seek.py  test_camera_motion.py  test_compiler.py  test_edits.py  test_fcpxml_export.py  test_flash_frame.py  test_identity_matte.py  test_keyframes.py  test_layers.py  test_object_edit.py  test_reframe.py  test_sam3_client.py  test_stabilize.py  test_zindex_text.py
services/segment-worker/: pyproject.toml
services/segment-worker/src/segment_worker/: __init__.py  __main__.py  activities.py  client.py  engine.py  workflows.py
services/segment-worker/tests/: test_activities.py  test_client.py  test_engine.py  test_segment_workflow.py
services/shared-py/: pyproject.toml
services/shared-py/src/shared_py/: __init__.py  aesthetic.py  config.py  feature_gating.py  feature_quality_checks.py  feature_tracer.py  identity_cluster.py  llm_client.py  logging_config.py  models.py  startup.py  storage.py  tracing.py  tuning.py  user_events.py  verb_registry.py  viewer_state.py  worker_runner.py
services/shared-py/src/shared_py/ai_providers/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  groq_provider.py  kimi_provider.py  openai_provider.py  openrouter_provider.py  programmatic_provider.py  qwen_provider.py
services/shared-py/tests/: test_feature_gating.py  test_feature_quality_checks.py  test_feature_tracer.py  test_identity_cluster.py  test_llm_client.py  test_storage.py  test_verb_registry.py  test_viewer_state.py  test_worker_runner.py
services/style-worker/: pyproject.toml
services/style-worker/src/style_worker/: __init__.py  __main__.py  activities.py  camera_motion.py  lut_extract.py  reference_analysis.py  reference_intent.py  siglip2.py  text_extract.py  transition_type.py  workflows.py
services/style-worker/src/style_worker/genome/: __init__.py  extract.py  storage.py
services/style-worker/src/style_worker/genome/families/: __init__.py  audio_align.py  composition.py  cut_rhythm.py  dwell.py  motion.py
services/style-worker/tests/: test_genome.py  test_reference_analysis.py  test_reference_intent.py  test_siglip2.py
(+418 files in other folders)
