[project]
name = "ai-video-editor-tests"
version = "0.1.0"
description = "Comprehensive test suite for AI Video Editor backend"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "shared-py",
    "ingest-worker",
    "reason-worker",
    "render-worker",
    "style-worker",
    "upscale-worker",
    "guardrails",
    "segment-worker",
    "insightface>=1.0.1",
    "onnxruntime-gpu>=1.27.0",
    "scikit-learn>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "services/shared-py/tests", "services/segment-worker/tests", "services/reason-worker/tests", "services/ingest-worker/tests", "services/render-worker/tests", "services/style-worker/tests"]
pythonpath = [
    "services/shared-py/src",
    "services/ingest-worker/src",
    "services/reason-worker/src",
    "services/style-worker/src",
    "services/render-worker/src",
    "services/upscale-worker/src",
    "services/guardrails/src",
    "services/segment-worker/src",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ffmpeg: marks tests that require FFmpeg",
    "optional: marks tests for optional dependencies",
    "requires_anthropic: requires ANTHROPIC_API_KEY to be set",
    "requires_google: requires GOOGLE_API_KEY to be set",
    "requires_groq: requires GROQ_API_KEY to be set",
    "requires_openai: requires OPENAI_API_KEY to be set",
    "requires_kimi: requires KIMI_API_KEY to be set",
    "requires_qwen: requires QWEN_API_KEY to be set",
    "requires_openrouter: requires OPENROUTER_API_KEY to be set",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


[tool.coverage.run]
source = [
    "services/shared-py/src",
    "services/ingest-worker/src",
    "services/reason-worker/src",
    "services/style-worker/src",
    "services/render-worker/src",
    "services/upscale-worker/src",
    "services/segment-worker/src",
]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.uv.workspace]
members = ["services/*"]

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cu124" }
torchvision = { index = "torch-cu124" }
torchaudio = { index = "torch-cu124" }
shared-py = { workspace = true }
ingest-worker = { workspace = true }
reason-worker = { workspace = true }
render-worker = { workspace = true }
style-worker = { workspace = true }
upscale-worker = { workspace = true }
guardrails = { workspace = true }
segment-worker = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
