[project]
name = "guardrails"
version = "0.1.0"
description = "NeMo Guardrails sidecar for AI Video Editor API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "nemoguardrails>=0.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
guardrails = { workspace = true }
