[project]
name = "ingest-worker"
version = "0.1.0"
dependencies = [
    "shared-py",
    "av>=12.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.26.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "scenedetect>=0.6.2",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "temporalio>=1.7.0",
    "insightface>=1.0.1",
    "onnxruntime-gpu>=1.27.0",
    "deepface>=0.0.93",
    "transformers>=4.40.0",
    "demucs==4.0.1",
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.1",
    "torch==2.8.0+cu126",
    "torchvision==0.23.0+cu126",
    "torchaudio==2.8.0+cu126",
]

[project.optional-dependencies]
real_structure = [
    "allin1>=1.1.0",
    "natten>=0.21.0",
]

[tool.uv.sources]
shared-py = { workspace = true }
