[project]
name = "reason-worker"
version = "0.1.0"
dependencies = [
    "shared-py",
    "ingest-worker",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "opencv-python>=4.9.0",
    "twelvelabs>=0.32.0",
    "google-genai>=2.9.0",
    "temporalio>=1.7.0",
    "scikit-learn>=1.9.0",
]

[project.optional-dependencies]
audio_scoring = [
    "faster-whisper>=1.0.0",
]
matting = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.uv.sources]
shared-py = { workspace = true }
ingest-worker = { workspace = true }
