[project]
name = "shared-py"
version = "0.1.0"
dependencies = [
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[tool.uv.sources]
shared-py = { workspace = true }
