[project]
name = "style-worker"
version = "0.1.0"
dependencies = [
    "shared-py",
    "temporalio>=1.10.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "color-matcher>=0.5.0",
    "colour-science>=0.4.3",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "scipy>=1.13.0",
    "scikit-image>=0.22.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
shared-py = { workspace = true }
