[package]
name = "ai-video-editor-desktop"
version = "0.1.0"
description = "AI Video Editor Desktop App"
authors = ["Devayan Dewri"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
